load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/yagehu/wsl-nogo/cmd/wsl",
    visibility = ["//visibility:private"],
    deps = ["@com_github_bombsimon_wsl_v3//:go_default_library"],
)

go_binary(
    name = "wsl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
